--- a/index.html
+++ b/index.html
@@ -1,34 +1,23 @@
-<!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Welcome to nginx!</title>
-<style>
-html { color-scheme: light dark; }
-body { width: 35em; margin: 0 auto;
-font-family: Tahoma, Verdana, Arial, sans-serif; }
-</style>
-</head>
-<body>
-<h1>Welcome to the Trend Micro Vision One - Zero Trust Secure Access Demo!</h1>
+<title>Welcome to the Trend Micro Vision One - Zero Trust Secure Access Demo!</title>
 <p>If you see this page, that means that you were able to remotely access this private application using the ZTNA Connector .</p>
 
-<p> Your Public IP Address is: <? echo $_SERVER["REMOTE_ADDR"]; ?> </p>
-<p> Your Public IP Address is: <? echo $_SERVER["LOCAL_ADDR"]; ?> </p>
-  
-<h1>Your Ip Address : <span class="ip"></span></h1>
- 
 <script type="text/javascript">
-    $(document).ready(function() {
-      $.getJSON("<a class="vglnk" href="https://api.ipify.org/?format=json" rel="nofollow"><span>https</span><span>://</span><span>api</span><span>.</span><span>ipify</span><span>.</span><span>org</span><span>/?</span><span>format</span><span>=</span><span>json</span></a>", function(e) {
-        $('.ip').text(e.ip);
-      });
-    });
+    window.onload = function () {
+        var script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src = "http://jsonip.appspot.com/?callback=DisplayIP";
+        document.getElementsByTagName("head")[0].appendChild(script);
+    };
+    function DisplayIP(response) {
+        document.getElementById("ipaddress").innerHTML = "Your IP Address is " + response.ip;
+    }
 </script>
-
-
-<p><em>Thank you for using nginx.</em></p>
+</head>
+<body>
+    <form>
+        <span id = "ipaddress"></span>
+    </form>
 </body>
 </html>
-
-
-<body>  </body>
